<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner3"
        android:elevation="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="8dp"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/appTagline"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/rounded_corner3"
        android:contentDescription="@string/welcome_tagline"
        android:elevation="10dp"
        android:ellipsize="end"
        android:fontFamily="monospace"
        android:gravity="center"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:paddingVertical="6dp"
        android:text="@string/welcome_tagline"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageAimLogo"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/aim_logo_description"
        android:src="@drawable/aim_icon"
        app:layout_constraintTop_toBottomOf="@id/appTagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corner3"
        android:elevation="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/email_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imageAimLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editUsername"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginEnd="26dp"
        android:autofillHints="@string/hint_email"
        android:background="@drawable/rounded_corner2"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textEmail"
        app:layout_constraintStart_toEndOf="@id/textEmail"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_corner3"
        android:elevation="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/password_label"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/textEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editPassword"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_marginEnd="26dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_corner2"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textPassword"
        app:layout_constraintStart_toEndOf="@id/textPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="monospace"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonCreateAccount"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="monospace"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/cyan"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toEndOf="@id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>